# ecosystem

./: CMakeLists.txt  README.md
private/: DarkSkyAPI.cpp  LightningGenerator.cpp  NaturalLightSimulator.cpp
public/: DarkSkyAPI.h  LightningGenerator.h  NaturalLightSimulator.h
test/: TestRandomLightningGenerator.cpp  TestWeatherData.cpp
tools/: FindJsonCpp.cmake
